--- a/WeatherApp/Resources/indicatorView.xib
+++ b/WeatherApp/Resources/indicatorView.xib
@@ -8,13 +8,9 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="indicatorView" customModule="WeatherApp" customModuleProvider="target">
-            <connections>
-                <outlet property="indicatorView" destination="iN0-l3-epB" id="dK9-cw-a6X"/>
-            </connections>
-        </placeholder>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="indicatorView" customModule="WeatherApp" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="indicatorView" customModule="WeatherApp" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" userLabel="View">
             <rect key="frame" x="0.0" y="0.0" width="122" height="32"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
