--- a/WeatherApp/Resources/DateView.xib
+++ b/WeatherApp/Resources/DateView.xib
@@ -7,7 +7,12 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DateView" customModule="WeatherApp" customModuleProvider="target"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DateView" customModule="WeatherApp" customModuleProvider="target">
+            <connections>
+                <outlet property="currentMonthAndDay" destination="uhr-Nq-pqz" id="TfZ-xK-HEO"/>
+                <outlet property="dayNameLabel" destination="waU-T6-RCX" id="Un3-Uc-h97"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
             <rect key="frame" x="0.0" y="0.0" width="140" height="19"/>
