--- a/WeatherApp/Resources/hourlyWeatherView.xib
+++ b/WeatherApp/Resources/hourlyWeatherView.xib
@@ -7,7 +7,14 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="hourlyWeatherView" customModule="WeatherApp" customModuleProvider="target"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="hourlyWeatherView" customModule="WeatherApp" customModuleProvider="target">
+            <connections>
+                <outlet property="channceOfRain" destination="y3e-kw-4jE" id="XB9-H7-LRy"/>
+                <outlet property="currentAndMaxTemp" destination="Bf8-7a-h5h" id="pkx-zJ-Bsi"/>
+                <outlet property="hour" destination="sjA-Pk-cwA" id="JNy-Nk-SeB"/>
+                <outlet property="weatherStatus" destination="gmV-AG-sku" id="JsR-kh-ijF"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
             <rect key="frame" x="0.0" y="0.0" width="72" height="104"/>
