--- a/WeatherApp/Resources/DateView.xib
+++ b/WeatherApp/Resources/DateView.xib
@@ -15,26 +15,26 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="140" height="19"/>
+            <rect key="frame" x="0.0" y="0.0" width="140" height="24"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" alignment="center" spacing="11" translatesAutoresizingMaskIntoConstraints="NO" id="dro-iK-oWW">
-                    <rect key="frame" x="17" y="-0.33333333333333393" width="106" height="19.666666666666671"/>
+                    <rect key="frame" x="17" y="2.3333333333333339" width="106" height="19.333333333333329"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="waU-T6-RCX">
-                            <rect key="frame" x="0.0" y="0.0" width="39.666666666666664" height="19.666666666666668"/>
+                            <rect key="frame" x="0.0" y="0.0" width="39.666666666666664" height="19.333333333333332"/>
                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="/" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dWk-vX-4j8">
-                            <rect key="frame" x="50.666666666666671" y="1" width="4.6666666666666643" height="18"/>
+                            <rect key="frame" x="50.666666666666671" y="0.66666666666666607" width="4.6666666666666643" height="18"/>
                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uhr-Nq-pqz">
-                            <rect key="frame" x="66.333333333333329" y="0.0" width="39.666666666666671" height="19.666666666666668"/>
+                            <rect key="frame" x="66.333333333333329" y="0.0" width="39.666666666666671" height="19.333333333333332"/>
                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
@@ -49,7 +49,7 @@
                 <constraint firstItem="dro-iK-oWW" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="JqJ-yZ-biA"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="53" y="-12"/>
+            <point key="canvasLocation" x="51.908396946564885" y="-14.084507042253522"/>
         </view>
     </objects>
 </document>
